# medium

./: README.md  databricks.yml  workspace-conf.json
collation/: modifier.sql
cost_testing/10bln_dlt_vs_pyspark/: bronze_to_silver_pyspark.ipynb  databricks.yml
cost_testing/2bln_bronze_to_silver/: Dashboard from "tests_results".lvdash.json  bronze_to_silver_sql.dbquery.ipynb  databricks.yml  list tests.dbquery.ipynb  source preparation 10 bln.py  tests_results.dbquery.ipynb
lineage/: row level.sql
news/: manifest.mf
news/202505/: 01. autloader cleaner.ipynb  02. Lakeflow UI connector.sql  03. workflows.sql  05. delta share materialized and stream.sql  06. clean rooms.sql  07. predictive.sql  08. JIT.sql  09. logs.ipynb  10. assistant.ipynb  11. query sinppet.dbquery.ipynb  12. new charts.lvdash.json  13. run apps localy.ipynb  14. custom data sources.ipynb  15. syntax.py  16. agg.sql  autloader cleaner.ipynb  logs.ipynb  plan.ipynb  pyproject.toml
news/202505/4. etl_dlt/: etl_dlt.sql
news/202505/workflow/: create table.ipynb  insert 1.ipynb  insert 2.ipynb
own-data-sources/: data source.py
own-data-sources-partitions/: data source.py
own-data-sources/myrestdatasource/: __init__.py  pyproject.toml  rest_datasource.py
resources/: videobundle_job.yml
security/: service credentials.ipynb
sql/: begin end.ipynb  case.sql  parameterization.ipynb  procedures.ipynb  sql_python_udf.ipynb
sql_pipe/: sql_pipe.ipynb
temp/: eventhub_as_kafka.py  query_listener.py
test/: README.md  databricks.yml  test.ipynb
test2/: README.md  databricks.yml
(+510 files in other folders)
